welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: not found: value setpos
    setpos(d-getMondeLargeur()+1)
    ^